bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: value =< is not a member of Int
  return(Math.abs(100-n:Int)=<10 || Math.abs(200-n:Int)=<10 )
                            ^NearHundred:2: error: value =< is not a member of Int
  return(Math.abs(100-n:Int)=<10 || Math.abs(200-n:Int)=<10 )
                                                       ^